--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,2 @@
-instaloader
-Flask
-python-telegram-bot==20.7
-websocket-client==1.7.0
-random11==0.0.1
-telebot==0.0.5
-names==0.3.0
-colorama==0.4.6
+pyTelegramBotAPI==4.3.1
+instaloader==4.9.4
