--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pyTelegramBotAPI==4.3.1
-instaloader==4.9.4
-python-telegram-bot==13.7.0
+python-telegram-bot==13.7
+requests
 python-dotenv
+instaloader
+pytelegrambotapi==4.3.1
